use development token for cloning

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Install KaaS-CLI
         shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.JENKINS_GITHUB_PAT }}
         run: |
           ./scripts/install-kaas.sh 
       
