--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Use KaaS Action
-        uses: ./action.yaml
+        uses: ./ 
         env:
           GITHUB_TOKEN: ${{ secrets.JENKINS_GITHUB_PAT }}
