Install kaas-cli with pip

--- a/action.yaml
+++ b/action.yaml
@@ -12,29 +12,7 @@ runs:
       with:
         python-version: "3.10"
 
-    - name: "Checkout KaaS"
-      uses: actions/checkout@v4
-      with:
-        repository: "runtimeverification/kaas"
-        ref: "develop"
-        path: "kaas"
-        token: ${{ inputs.github-token }}
-
     - name: "Install Pip Packages"
       shell: bash
       run: |
-        pip install poetry click
-
-    - name: "Install KaaS"
-      shell: bash
-      run: |
-        pushd kaas/kaas-cli/
-        make build
-        pip install dist/*.whl
-        poetry install
-        popd
-
-    - name: "Put kaas-cli on the GITHUB_PATH"
-      shell: bash
-      run: |
-        echo "export PATH=\$PATH:\$HOME/.local/bin" >> $GITHUB_PATH
+        pip install kaas-cli
